@startuml

' New Architecture
class Car {
    - final String _id
    - final String _model
    - final String _brand
    + Car(id: String, model: String, brand: String)
    + getId(): String
    + getModel(): String
    + getBrand(): String
}

class CarDb {
    - List<Car> _carsDb
    + getFromDb(carId: String): Car
    + getCars():List<Car> 
}

class CarService {
    - CarDb CarDb
    + CarService(CarDb: CarDb)
    + getCarsNames(): String
    + getBestCar(): Car
}

Car -- CarDb
CarService -- CarDb

@enduml
